--- a/openpifpaf/train_scratch.ipynb
+++ b/openpifpaf/train_scratch.ipynb
@@ -22,8 +22,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OpenPifPaf version 0.12.13+0.g6981019.dirty\n",
-      "PyTorch version 1.10.0+cu102\n"
+      "OpenPifPaf version 0.12.13\n",
+      "PyTorch version 1.9.1+cu102\n"
      ]
     }
    ],
@@ -61,38 +61,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:openpifpaf.train:neural network device: cuda (CUDA available: True, count: 1)\n",
-      "INFO:openpifpaf.encoder.factory:Config Factory\n",
-      "INFO:openpifpaf.network.basenetworks:resnet50: stride = 16, output features = 2048\n",
-      "INFO:openpifpaf.network.heads:cif config: fields = 17, confidences = 1, vectors = 1, scales = 1 kernel = 1, padding = 0, dilation = 1\n",
-      "INFO:openpifpaf.network.heads:Out Features: 85 , conv: Conv2d(2048, 85, kernel_size=(1, 1), stride=(1, 1)) \n",
-      "INFO:openpifpaf.network.heads:caf config: fields = 19, confidences = 1, vectors = 2, scales = 2 kernel = 1, padding = 0, dilation = 1\n",
-      "INFO:openpifpaf.network.heads:Out Features: 171 , conv: Conv2d(2048, 171, kernel_size=(1, 1), stride=(1, 1)) \n",
-      "INFO:openpifpaf.network.losses.composite:cif: n_vectors = 1, n_scales = 1\n",
-      "INFO:openpifpaf.network.losses.composite:caf: n_vectors = 2, n_scales = 2\n",
-      "INFO:openpifpaf.network.losses.multi_head:multihead loss: ['cocokp.cif.c', 'cocokp.cif.vec1', 'cocokp.cif.scales1', 'cocokp.caf.c', 'cocokp.caf.vec1', 'cocokp.caf.vec2', 'cocokp.caf.scales1', 'cocokp.caf.scales2'], [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
-      "INFO:openpifpaf.plugins.coco.cocokp:Preprocess Encoder Data\n",
-      "loading annotations into memory...\n",
-      "Done (t=4.98s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "INFO:openpifpaf.plugins.coco.dataset:filter for annotations (min kp=1) ...\n",
-      "INFO:openpifpaf.plugins.coco.dataset:... done.\n",
-      "INFO:openpifpaf.plugins.coco.dataset:Images: 56599\n",
-      "INFO:openpifpaf.plugins.coco.cocokp:Preprocess Encoder Data\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.17s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "INFO:openpifpaf.plugins.coco.dataset:filter for annotations (min kp=1) ...\n",
-      "INFO:openpifpaf.plugins.coco.dataset:... done.\n",
-      "INFO:openpifpaf.plugins.coco.dataset:Images: 2346\n",
-      "INFO:openpifpaf.optimize:SGD optimizer\n",
-      "INFO:openpifpaf.optimize:training batches per epoch = 56599\n",
-      "INFO:openpifpaf.network.trainer:{'type': 'config', 'field_names': ['cocokp.cif.c', 'cocokp.cif.vec1', 'cocokp.cif.scales1', 'cocokp.caf.c', 'cocokp.caf.vec1', 'cocokp.caf.vec2', 'cocokp.caf.scales1', 'cocokp.caf.scales2']}\n"
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d87f8aad572d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdatamodule\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnet_cpu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_epoch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhead_metas\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatamodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead_metas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/openpifpaf/train.py\u001b[0m in \u001b[0;36mcli\u001b[0;34m()\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[0moptimize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m     \u001b[0mshow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m     \u001b[0mvisualizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcli\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/openpifpaf/show/cli.py\u001b[0m in \u001b[0;36mcli\u001b[0;34m(parser)\u001b[0m\n\u001b[1;32m     12\u001b[0m     group.add_argument('--save-all', nargs='?', default=None, const='all-images/',\n\u001b[1;32m     13\u001b[0m                        help='every plot is saved (optional to specify directory)')\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mCanvas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mAnimationFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     group.add_argument('--show', default=False, action='store_true',\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -156,168 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:openpifpaf.encoder.cif:Confidence Shape: torch.Size([17, 25, 25])\n",
-      "INFO:openpifpaf.encoder.cif:Confidence Fields: tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]]])\n",
-      "torch.Size([1, 3, 385, 385])\n",
-      "INFO:openpifpaf.encoder.cif:Confidence Shape: torch.Size([17, 25, 25])\n",
-      "INFO:openpifpaf.encoder.cif:Confidence Fields: tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]]])\n",
-      "INFO:openpifpaf.encoder.cif:Confidence Shape: torch.Size([17, 25, 25])\n",
-      "INFO:openpifpaf.encoder.cif:Confidence Fields: tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 1., 1., 0.],\n",
-      "         [0., 0., 0.,  ..., 1., 1., 0.],\n",
-      "         [0., 0., 0.,  ..., 1., 1., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
-      "\n",
-      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]]])\n",
-      "INFO:openpifpaf.network.trainer:applying ema\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# trainer.loop(train_loader, val_loader, start_epoch=start_epoch)\n",
     "\n",
@@ -419,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
